# graphit

./: .gitignore  Cargo.toml  README.md  graphit.wai  index.html
crates/core/: Cargo.toml
crates/core/src/: error.rs  graph.rs  helper.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: helper.rs  lib.rs
example/graphit-react/: index.html  package-lock.json  package.json  vite.config.ts
example/graphit-react/src/: App.tsx
src/: lib.rs
