[workspace]
resolver = "2"          # always use resolver 2 for new projects
members = [
    "crates/core",
    "crates/wasm",
    "crates/utils",
]

# Shared dependency versions across all crates — avoids version drift
[workspace.dependencies]
anyhow    = "1"
tracing   = "0.1"
serde     = { version = "1", features = ["derive"] }
tokio     = { version = "1", features = ["full"] }
thiserror = "2"
fnv = "1.0.7"
rand = "0.10.0"

[workspace.package]
version      = "0.0.5"
authors      = ["Hossein Fakhari fakhari.hossein@gmail.com"]
edition      = "2021"
license      = "MIT"
repository   = "https://github.com/shinogati/graphit"
description = "Just Graph it!"
homepage = "https://shinogati.github.io/graphit/"
readme = "README.md"