[package]
name    = "graphit-core"
version.workspace = true
edition.workspace = true

[dependencies]
graphit-utils = { path = "../utils" }
anyhow.workspace   = true
serde.workspace    = true
tracing.workspace  = true
thiserror.workspace = true
fnv.workspace = true
rand.workspace = true
