[package]
name    = "graphit-core"
version      = "0.0.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
thiserror.workspace = true
fnv.workspace = true
rand.workspace = true
