[package]
name    = "graphit-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
graphit-core = { path = "../core" }
anyhow.workspace   = true
serde.workspace    = true
tracing.workspace  = true
wasm-bindgen = "0.2.117"
console_error_panic_hook = {version = "0.1.7", optional = true}
fnv.workspace = true
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }


[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"