[package]
name    = "graphit"
version      = "0.0.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
graphit-core = { path = "../core", version = "0.0.5" }
wasm-bindgen = "0.2.117"
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }


[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"